# aegistrate

./: .gitignore  Cargo.toml  LICENSE  README.md  clippy.toml  rustfmt.toml
.devcontainer/: devcontainer.json  setup.sh
.github/workflows/: rust.yml
docs/: EXEC-CONFIG.md  MAKE-A-COMMAND.md
src/: aegis.rs  exec_config.rs  handler.rs  log.rs  main.rs  simple_duration.rs
src/bot/: handler.rs  mod.rs
src/bot/commands/components/: embed.rs
src/bot/commands/plugins/: mod.rs
src/bot/commands/plugins/information/: mod.rs  ping.rs
src/bot/commands/plugins/moderation/: ban.rs  kick.rs  mod.rs  timeout.rs
src/bot/commands/plugins/plugins/: disable.rs  enable.rs  mod.rs
src/bot/commands/util/: logic.rs  message.rs  options.rs
src/bot/core/: command.rs  cooldown.rs  mod.rs  plugin.rs
src/bot/core/command/: mod.rs  register.rs  validate.rs
src/bot/core/moderation/: ban.rs  kick.rs  mod.rs  moderate.rs  timeout.rs
src/bot/data/: cooldown.rs  mod.rs  plugin.rs
src/commands/: mod.rs
src/commands/components/: embed.rs  mod.rs
src/commands/plugins/: mod.rs
src/commands/plugins/information/: mod.rs  ping.rs
src/commands/plugins/plugins/: disable.rs  enable.rs  enable_plugin.rs  mod.rs
src/commands/util/: logic.rs  message.rs  mod.rs  options.rs
src/core/: command.rs  cooldown.rs  mod.rs  plugin.rs
src/dashboard/: mod.rs
src/data/: cooldown.rs  mod.rs  plugin.rs
