[package]
name = "aegistrate"
version = "0.1.0"
edition = "2021"
authors = ["developer-ramen <ramendev2009@gmail.com>"]
# rust-version — The minimal supported Rust version.
description = "Your Discord guild's aegis and magistrate! Yes, some people get that portmanteau."
readme = "README.md"
repository = "https://github.com/developer-ramen/aegistrate"
license = "MIT"
keywords = ["discord", "discord-bot", "moderation", "general-purpose"]

[dependencies]
anyhow = "1.0.71"
async-trait = "0.1.68"
derive-new = "0.5.9"
derive_builder = "0.12.0"
dotenv = "0.15.0"
duration-str = "0.5.1"
enum-iterator = "1.4.1"
env_logger = "0.10.0"
futures = "0.3.28"
home = "0.5.5"
log = "0.4.17"
mongod = { version = "0.3.3", features = ["chrono", "derive", "mongod-derive"]}
mongodb = { version = "2.5.0", features = ["log", "reqwest"]}
pluralizer = "0.4.0"
reqwest = "0.11.18"
serde = { version = "1.0.164", features = ["serde_derive", "derive"] }
serenity = { version = "0.11.6", default-features = false, features = ["cache", "client", "gateway", "model", "rustls_backend"] }
thiserror = "1.0.43"
time = "0.3.23"
tokio = { version = "1.28.1", features = ["full"] }
toml = "0.7.4"
