[package]
name = "aegistrate"
version = "0.1.0"
edition = "2021"
authors = ["developer-ramen <ramendev2009@gmail.com>"]
# rust-version — The minimal supported Rust version.
description = "Your Discord guild's aegis and magistrate! Yes, some people get that portmanteau."
readme = "README.md"
repository = "https://github.com/developer-ramen/aegistrate"
license = "MIT"
keywords = ["discord", "discord-bot", "moderation", "general-purpose"]

[dependencies]
anyhow = "1.0.81"
dirs = "5.0.1"
log = "0.4.21"
log4rs = "1.3.0"
serenity = "0.12.1"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
